--- a/applications/web-server/src/main/templates/data.html
+++ b/applications/web-server/src/main/templates/data.html
@@ -1,8 +1,82 @@
-{% extends 'base.html' %}
-{% block content %}
-<ul>
-  {% for listing in listings %}
-  <li>{{ listing.mls_number }} {{ listing.address }}</li>
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+  </style>
+</head>
+<body>
+
+<h2>Listing Records</h2>
+
+<table>
+  <tr>
+    <th>ID</th>
+    <th>Sale Type</th>
+    <th>Sold Date</th>
+    <th>Property Type</th>
+    <th>Address</th>
+    <th>City</th>
+    <th>State or Province</th>
+    <th>Zip or Postal Code</th>
+    <th>Price</th>
+    <th>Beds</th>
+    <th>Baths</th>
+    <th>Location</th>
+    <th>Square Feet</th>
+    <th>Lot Size</th>
+    <th>Year Built</th>
+    <th>Days on Market</th>
+    <th>Price per Square Feet</th>
+    <th>HOA per Month</th>
+    <th>Status</th>
+    <th>Next Open House Start Time</th>
+    <th>Next Open House End Time</th>
+    <th>URL</th>
+    <th>Source</th>
+    <th>MLS Number</th>
+    <th>Favorite</th>
+    <th>Interested</th>
+    <th>Latitude</th>
+    <th>Longitude</th>
+
+    {% for record in records %}
+  <tr>
+    {% for key, value in record.items() %}
+    {% if key != 'id' %}
+    {% if value %}
+    {% if key == 'url' %}
+    <td><a href="{{ value }}">{{ value }}</a></td>
+    {% else %}
+    <td>{{ value }}</td>
+    {% endif %}
+    {% else %}
+    {% if key == 'url' %}
+    <td>N/A</td>
+    {% else %}
+    <td></td>
+    {% endif %}
+    {% endif %}
+    {% endif %}
+    {% endfor %}
+  </tr>
+
   {% endfor %}
-</ul>
-{% endblock %}
+
+</table>
+
+</body>
