Adding print statement for query.all() for testing

--- a/applications/web-server/src/main/templates/data.html
+++ b/applications/web-server/src/main/templates/data.html
@@ -1,98 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>List of Homes</title>
-  <style>
-    table {
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-    }
-
-    td, th {
-      border: 1px solid #dddddd;
-      text-align: left;
-      padding: 8px;
-    }
-
-    tr:nth-child(even) {
-      background-color: #dddddd;
-    }
-  </style>
-</head>
-<body>
-
-<h2>Listing Records</h2>
-
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Sale Type</th>
-      <th>Sold Date</th>
-      <th>Property Type</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>State or Province</th>
-      <th>Zip or Postal Code</th>
-      <th>Price</th>
-      <th>Beds</th>
-      <th>Baths</th>
-      <th>Location</th>
-      <th>Square Feet</th>
-      <th>Lot Size</th>
-      <th>Year Built</th>
-      <th>Days on Market</th>
-      <th>Price per Square Feet</th>
-      <th>HOA per Month</th>
-      <th>Status</th>
-      <th>Next Open House Start Time</th>
-      <th>Next Open House End Time</th>
-      <th>URL</th>
-      <th>Source</th>
-      <th>MLS Number</th>
-      <th>Favorite</th>
-      <th>Interested</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-    </tr>
-  </thead>
-  {% block content %}
+{% extends 'base.html' %}
+{% block content %}
+<ul>
   {% for record in records %}
-  <tbody>
-    <tr>
-      <td>{{ record['mls'] }}</td>
-      <td>{{ record['sale_type'] }}</td>
-      <td>{{ record['sold_date'] }}</td>
-      <td>{{ record['property_type'] }}</td>
-      <td>{{ record['address'] }}</td>
-      <td>{{ record['city'] }}</td>
-      <td>{{ record['state_or_province'] }}</td>
-      <td>{{ record['zip_or_postal_code'] }}</td>
-      <td>{{ record['price'] }}</td>
-      <td>{{ record['beds'] }}</td>
-      <td>{{ record['baths'] }}</td>
-      <td>{{ record['location'] }}</td>
-      <td>{{ record['square_feet'] }}</td>
-      <td>{{ record['lot_size'] }}</td>
-      <td>{{ record['year_built'] }}</td>
-      <td>{{ record['days_on_market'] }}</td>
-      <td>{{ record['price_per_square_feet'] }}</td>
-      <td>{{ record['hoa_per_month'] }}</td>
-      <td>{{ record['status'] }}</td>
-      <td>{{ record['next_open_house_start_time'] }}</td>
-      <td>{{ record['next_open_house_end_time'] }}</td>
-      <td>{{ record['url'] }}</td>
-      <td>{{ record['source'] }}</td>
-      <td>{{ record['favorite'] }}</td>
-      <td>{{ record['interested'] }}</td>
-      <td>{{ record['longitude'] }}</td>
-      <td>{{ record['latitude'] }}</td>
-    </tr>
-  </tbody>
+  <li>{{ record }}</li>
   {% endfor %}
-  {% endblock %}
-</table>
-
-</body>
+</ul>
+{% endblock %}
