Adding print statement for query.all() for testing

--- a/applications/web-server/src/main/templates/data.html
+++ b/applications/web-server/src/main/templates/data.html
@@ -83,7 +83,7 @@
       <td>{{ record['status'] }}</td>
       <td>{{ record['next_open_house_start_time'] }}</td>
       <td>{{ record['next_open_house_end_time'] }}</td>
-      <td>{{ record['url'] }}</td>
+      <td><a href="{{ record['url'] }}">{{ record['url'] }}</a></td>
       <td>{{ record['source'] }}</td>
       <td>{{ record['favorite'] }}</td>
       <td>{{ record['interested'] }}</td>
