--- a/applications/web-server/src/main/templates/data.html
+++ b/applications/web-server/src/main/templates/data.html
@@ -19,9 +19,37 @@
     tr:nth-child(even) {
       background-color: #dddddd;
     }
+    
+    .logo {
+        display:flex; 
+        justify-content:center; 
+        align-items:center; 
+        height:100px; 
+        width:auto; 
+        background-color:#4CAF50; 
+        color:white; 
+        font-size:30px; 
+        font-weight:bold; 
+        text-align:center; 
+        margin-bottom:20px
+    }
+    
+    .logo img {
+        height:auto; 
+        width:auto; 
+        max-height:80%; 
+        max-width:80%; 
+        margin-right:auto
+    }
+    
   </style>
 </head>
 <body>
+
+<div class="logo">
+   <img src="https://i.imgur.com/9XKjJ6M.png" alt="My Buy Box logo" />
+   My Buy Box
+</div>
 
 <h2>Listing Records</h2>
 
