--- a/applications/web-server/src/main/templates/index.html
+++ b/applications/web-server/src/main/templates/index.html
@@ -26,6 +26,7 @@
       box-sizing: border-box;
       border-radius: 4px;
       border: none;
+      border: solid #4CAF50; /* Add a green border */
     }
     input[type=submit] {
       background-color: #4CAF50;
@@ -39,9 +40,33 @@
     input[type=submit]:hover {
       background-color: #45a049;
     }
+    .logo {
+        display:flex; 
+        justify-content:center; 
+        align-items:center; 
+        height:100px; 
+        width:auto; 
+        background-color:#4CAF50; 
+        color:white; 
+        font-size:30px; 
+        font-weight:bold; 
+        text-align:center; 
+        margin-bottom:20px
+    }
+    .logo img {
+        height:auto; 
+        width:auto; 
+        max-height:80%; 
+        max-width:80%; 
+        margin-right:auto
+    }
   </style>
 </head>
 <body>
+<div class="logo">
+   <img src="https://i.imgur.com/9XKjJ6M.png" alt="My Buy Box logo" />
+   My Buy Box
+</div>
 <form action="/verify" method="POST">
   <label for="zip">Enter your zip code:</label><br>
   <input type="text" id="zip" name="zip"><br><br>
