--- a/applications/web-server/src/main/templates/invalid.html
+++ b/applications/web-server/src/main/templates/invalid.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-{{ zip_code }} is invalid. Please enter a valid zipcode.
+<div class="logo">
+   <img src="https://i.imgur.com/9XKjJ6M.png" alt="My Buy Box logo" />
+   My Buy Box
+</div>
+<p style="color: red; font-size: 20px;">{{ zip_code }} is invalid. Please enter a valid zipcode.</p>
 {% endblock %}
